# PG-GMO

./: .gitignore  README.md
project/: ADVANCED_CODE_QUALITY_INSIGHTS.md  ARCHITECTURE_ENHANCEMENT_GUIDE.md  CODE_QUALITY_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  QUICK_START_GUIDE.md  README.md  package.json  setup.cfg  tsconfig.build.json  tsconfig.test.json  代码质量与可维护性深度增强建议.md  代码质量自动化工具链.md  企业级代码质量与架构现代化指南.md  企业级安全增强方案.md  团队协作与知识管理体系.md  团队协作与长期维护最佳实践指南.md  智能化监控与告警系统设计.md  深度代码架构分析与优化建议.md  高级性能优化策略指南.md
project/.devcontainer/: devcontainer.json  post_create.sh
project/MCP/: MCP服务器功能总结.md  MCP服务器集成完成报告.md  mcp_servers_config.json
project/MCP/collaboration/: excel_mcp_server.py
project/MCP/creative-design/: README.md  creative_mcp_servers_config.json  figma_mcp_config.json  install_creative_tools.py  local_blender_mcp_server.py  local_figma_mcp_server.py  mcp_openai_config.json  mcp_servers_config.json
project/MCP/data-processing/: csv_explorer_config.json  demo_database.db  demo_employees.csv  financial_datasets_config.json  local_csv_explorer_server.py  local_database_mcp_server.py  local_qdrant_mcp_server.py  qdrant_mcp_config.json  数据处理工具使用指南.md
project/MCP/digital-human/: livetalking_config.json  local_digital_human_server.py
project/public/: index.html
project/scripts/: health_check.sh  init-db.sql  init_project.sh
project/src/: client.ts  index.js  index.ts  main.py
project/src/__tests__/: client.test.js  config_reader.test.js  index.test.js  integration.test.js
project/src/ai/: __init__.py
tools/: finish.py  (+76 more)
(+600 files in other folders)
