[metadata]
name = pg-gmo-project
version = 1.0.0
description = PG-GMO工作室智能项目管理系统
author = PG-GMO工作室
author_email = contact@pg-gmo.com

[options]
python_requires = >=3.8
install_requires =
    requests
    pydantic
    fastapi
    uvicorn

[options.extras_require]
dev =
    pytest
    black
    flake8
    pylint
    mypy
    pre-commit

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist

[pylint]
max-line-length = 120
disable =
    C0111,  # missing-docstring
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short